# pydoku

./: LICENSE  README.md  pyproject.toml
src/pydoku/: main.py
tests/: test_board.py
